--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Mon Jul 28 22:44:18 UTC 2025
+#Wed Jul 30 16:17:34 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
